laborations/lab1/testsuite/good/synthetic026.cc
int main () {
	int foo = x::i;
}
