laborations/lab1/testsuite/bad/bad047.cc
void foo(int& = 4) {

}
